Fix image width on mobile view

--- a/src/containers/Main/Main.scss
+++ b/src/containers/Main/Main.scss
@@ -18,6 +18,7 @@
   }
   .main-image {
     height: calc(75vh - 100px);
+    max-width: 100%;
     width: auto;
   }
 }
